tests/snapshots/examples_fixtures/type_system__failing__77_hm_logical_non_bool_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/77_hm_logical_non_bool_compile_mismatch.flx:2:5
  |
2 |     a && b
  |     ^^^^^^
  |     ------ this expression has type `Int and Bool`

  |     ------ operator operands are known at compile time

Note:
  expected type: Bool operands
  found type: Int and Bool

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion
== stdout ==
<not executed>
